# LOB-Matching-Engine

./: .gitignore  BENCHMARK.md  BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.md  CMakeLists.txt  PERFORMANCE_ANALYSIS.md  README.md  test_perf.ps1
.github/workflows/: ci.yml
data/: sample.csv
docs/: architecture.md
include/: CSVReader.h  Message.h  OrderBook.h  Trade.h
scripts/: README_DIAGRAMS.md  benchmark.ps1  benchmark.sh  generate_diagrams.py  generate_large_dataset.py  requirements_diagrams.txt  run_benchmark.ps1  run_benchmark.sh
src/: CSVReader.cpp  OrderBook.cpp  generate_dataset.cpp  main.cpp
tests/: test_orderbook.cpp
